dbservice.yml
apiVersion: v1
kind: Service
metadata:
  name: sk011-mariadb-svc
  namespace: skala3-ai1
spec:
  selector:
    app: mariadb
  ports:
  - port: 3306
    targetPort: 330
