mariadb-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk011-mariadb
  namespace: skala-practice
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: sk011-mariadb-svc
  namespace: skala-practice
spec:
  selector:
    app: mariadb
  ports:
  - port: 3306
    targetPort: 330
