service.yml
apiVersion: v1
kind: Service
metadata:
  name: sk011-stock-svc
  namespace: skala3-ai1
spec:
  selector:
    app: spring  # Deployment의 labels.app과 똑같아야 합니다!
  ports:
    - protocol: TCP
      port: 80       # 서비스가 외부(클러스터 내부)에서 받는 포트
      targetPort: 9080 # 실제 스프링부트 컨테이너가 쓰고 있는 포트
  type: ClusterIP   # 클러스터 내부 통신용 (필요시 LoadBalancer로 변경)
