sk011-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sk011-service
  namespace: skala3-ai1
spec:
  selector:
    app: spring
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
